# dissertation

./: .Rprofile  .gitattributes  .gitignore  .gitmodules  _quarto.yml  fa_review_form_2nov22.docx  hrp_502.docx  index.qmd  pyproject.toml  readme.md
assets/: _theory.qmd  dissertation.bib  environment.yaml  theory_diagram.mermaid  theory_diagram.qmd  win_environment.yaml
chapter_2/: .gitignore
chapter_2/code/: fun.py  helper.py
chapter_2/src/: chapter_2.qmd
chapter_2/test/: test_discrepancy.R  test_discrepancy_df.R  test_generate_samples.R  test_one_sample.R  test_sim_all.R  test_true_positive.R
chapter_5/src/: conclusion.qmd
code/: 00_pre-test.py  01_capd_text_scraping.ipynb  01_capd_text_scraping.py  02_capd_img_scraping.ipynb  02_capd_img_scraping.py  03_capd_downloading_images.py  04_color_detection.py  04_mit_election_lab_merge.py  05_color_detection.py  05_mit_election_lab_merge.py  cover.py  fun.py  nifty_commands.txt  theory_diagram.qmd
code/chapter_2/: 00_pre-test.py  01_capd_text_scraping.py  02_capd_img_scraping.py  05_mit_election_lab_merge.py  fun.py
code/cover/: cover.py  cover_fun.py
code/pre-reg_reports/: color_influence_pre-reg_anon.qmd
color_influence_pre-reg_anon_cache/pdf/: setup-block_57e84d9d3aef6973a9449002b2236b05.RData  (+1 more)
drafts/: dissertation.bib  prospectus_draft_fall_2022.qmd
memos/: dcr_dissertation_ideas_memo.tex  dcr_peeling_the_onion_memo.tex  dcr_setting_up_argument.tex
pre-reg_reports/: color_influence_pre-reg_anon.qmd  si_color_influence_pre-reg_anon.knit.md  si_color_influence_pre-reg_anon.qmd
prospectus/: dcr_prospectus_draft.tex
(+177 files in other folders)
