[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = "Poetry .venv for DCR dissertation"
authors = ["DamonCharlesRoberts <damon.roberts-1@colorado.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
opencv-python = "^4.7.0.72"
selenium = "^4.8.2"
duckdb = "^0.7.1"
polars = "^0.16.14"
pip = "^23.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
